--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"helios-distribution-types": "^1.3.0",
 		"jquery": "^3.7.1",
 		"lodash.merge": "^4.6.2",
+		"prismarine-nbt": "^2.8.0",
 		"semver": "^7.7.3",
 		"toml": "^3.0.0"
 	},
