--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,73 +1,66 @@
 name: Electron 을 통한 웹앱 빌드(mac/windows - tag기반)
 
 on:
-  push:
-    tags:
-      - "v*.*.*" # v1.2.3 같은 태그 푸시 시에만 실행
+    push:
+        tags:
+            - "v*.*.*"
 
 permissions:
-  contents: write # Release 생성/파일 업로드 권한
+    contents: write
 
 jobs:
-  build:
-    name: Build (${{ matrix.os }})
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [windows-latest, macos-latest]
+    build:
+        if: startsWith(github.ref, 'refs/tags/v')
+        name: Build (${{ matrix.os }})
+        runs-on: ${{ matrix.os }}
+        strategy:
+            fail-fast: false
+            matrix:
+                os: [windows-latest, macos-latest]
 
-    steps:
-      - uses: actions/checkout@v4
+        steps:
+            - uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "npm"
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: "20"
+                  cache: "npm"
 
-      - name: Install deps
-        run: npm ci
+            - run: npm ci
+            - run: npm run build
 
-      - name: App build (your script)
-        run: npm run build
+            - name: Electron build (no publish)
+              run: npx electron-builder --publish=never
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Electron build (no publish)
-        run: npx electron-builder --publish=never
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - uses: actions/upload-artifact@v4
+              with:
+                  name: dist-${{ matrix.os }}
+                  path: dist/**
+                  if-no-files-found: error
 
-      - name: Upload dist artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: dist-${{ matrix.os }}
-          path: |
-            dist/**
-          if-no-files-found: error
+    release:
+        if: startsWith(github.ref, 'refs/tags/v')
+        needs: build
+        runs-on: ubuntu-latest
 
-  release:
-    name: Create GitHub Release
-    needs: build
-    runs-on: ubuntu-latest
+        steps:
+            - uses: actions/download-artifact@v4
+              with:
+                  path: artifacts
 
-    steps:
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: artifacts
-
-      - name: Create Release for tag
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ github.ref_name }} # push된 태그(v1.2.3)
-          name: ${{ github.ref_name }}
-          generate_release_notes: true
-          files: |
-            artifacts/**/**/*.exe
-            artifacts/**/**/*.msi
-            artifacts/**/**/*.dmg
-            artifacts/**/**/*.pkg
-            artifacts/**/**/*.zip
-            artifacts/**/**/*.AppImage
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - uses: softprops/action-gh-release@v2
+              with:
+                  tag_name: ${{ github.ref_name }}
+                  name: ${{ github.ref_name }}
+                  generate_release_notes: true
+                  files: |
+                      artifacts/**/**/*.exe
+                      artifacts/**/**/*.msi
+                      artifacts/**/**/*.dmg
+                      artifacts/**/**/*.pkg
+                      artifacts/**/**/*.zip
+                      artifacts/**/**/*.AppImage
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
