--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
     workflow_dispatch:
         inputs:
             tag:
-                description: "Release tag (e.g., v1.2.3). Must already exist or will be created as an annotated tag locally first."
+                description: "릴리즈 태그 입력(예: v1.2.3)"
                 required: true
                 default: "v0.0.0"
             prerelease:
@@ -76,11 +76,10 @@ jobs:
                   prerelease: ${{ inputs.prerelease }}
                   generate_release_notes: true
                   files: |
-                      artifacts/**/**/*.exe
-                      artifacts/**/**/*.msi
-                      artifacts/**/**/*.dmg
-                      artifacts/**/**/*.pkg
-                      artifacts/**/**/*.zip
-                      artifacts/**/**/*.AppImage
+                      artifacts/**/RSC-Launcher-setup-*.exe
+                      artifacts/**/RSC-Launcher-setup-*.dmg
+                      artifacts/**/RSC-Launcher-setup-*.msi
+                      artifacts/**/RSC-Launcher-setup-*.zip
+                      artifacts/**/RSC-Launcher-setup-*.AppImage
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
