--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,18 +43,34 @@ jobs:
             - name: Install Dependencies
               run: npm ci
 
-            # package.json에 dist 스크립트가 electron-builder 실행으로 잡혀있다는 전제
             - name: Build (electron-builder)
               env:
                   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: npm run dist
 
+            # dist 산출물(특히 latest*.yml / blockmap) 확인용 로그
+            - name: List dist output (debug)
+              shell: bash
+              run: |
+                  echo "===== dist tree ====="
+                  if [ -d "dist" ]; then
+                    ls -la dist
+                    echo ""
+                    echo "----- yml files -----"
+                    find dist -maxdepth 2 -type f \( -name "*.yml" -o -name "*.yaml" \) -print
+                    echo ""
+                    echo "----- blockmap files -----"
+                    find dist -maxdepth 2 -type f -name "*.blockmap" -print
+                  else
+                    echo "dist directory not found."
+                    exit 1
+                  fi
+
             - name: Upload dist artifacts
               uses: actions/upload-artifact@v4
               with:
                   name: dist-${{ matrix.os }}
-                  path: |
-                      dist/**
+                  path: dist/**
                   if-no-files-found: error
 
     release:
@@ -68,6 +84,19 @@ jobs:
               with:
                   path: artifacts
 
+            # 릴리즈 직전, 다운로드된 아티팩트 구조/파일 확인
+            - name: List downloaded artifacts (debug)
+              shell: bash
+              run: |
+                  echo "===== artifacts tree ====="
+                  ls -la artifacts || true
+                  echo ""
+                  echo "----- yml files -----"
+                  find artifacts -type f \( -name "*.yml" -o -name "*.yaml" \) -print || true
+                  echo ""
+                  echo "----- blockmap files -----"
+                  find artifacts -type f -name "*.blockmap" -print || true
+
             - name: Create Release
               uses: softprops/action-gh-release@v2
               with:
@@ -76,10 +105,20 @@ jobs:
                   prerelease: ${{ inputs.prerelease }}
                   generate_release_notes: true
                   files: |
+                      # ---- installers (설치 파일만) ----
                       artifacts/**/RSC-Launcher-setup-*.exe
-                      artifacts/**/RSC-Launcher-setup-*.dmg
                       artifacts/**/RSC-Launcher-setup-*.msi
+                      artifacts/**/RSC-Launcher-setup-*.dmg
+                      artifacts/**/RSC-Launcher-setup-*.pkg
                       artifacts/**/RSC-Launcher-setup-*.zip
                       artifacts/**/RSC-Launcher-setup-*.AppImage
+
+                      # ---- electron-updater metadata (필수) ----
+                      artifacts/**/latest.yml
+                      artifacts/**/latest-mac.yml
+                      artifacts/**/latest-linux.yml
+
+                      # ---- differential update (권장/사실상 필요) ----
+                      artifacts/**/*.blockmap
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
