--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -48,3 +48,9 @@ linux:
 directories:
     buildResources: "build"
     output: "dist"
+
+publish:
+    - provider: github
+      owner: corche
+      repo: RSCLauncher
+      releaseType: release
